--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rezaul H Reza - Developer & Designer</title>
+    <title>It's REZA </title>
 
     <!-- Bootsrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -20,8 +20,16 @@
     <!-- font awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon_io/site.webmanifest">
+
+
     <!-- Style sheet -->
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/main.css">
 
 </head>
 
@@ -74,9 +82,9 @@
                     <div class="home-left">
                         <h2>Hi, my name is <span class="name-highlight"> Reza </span> </h2>
                         <h4>I'm the developer you need</h4>
-                        <button class="btn btn-lg button "> <a href="pages/portfolio.html">Know more</a><i
-                                class="fas fa-arrow-right"></i>
-                        </button>
+                        <button class="btn btn-lg button "> <a
+                                href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/">Hire
+                                Me</a><i class="fas fa-arrow-right"></i>
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
@@ -88,9 +96,38 @@
         </div>
 
     </section>
-    <!-- Home page ends -->
+    <!-- intro ends -->
 
+    <!--about starts-->
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="about-image home-left"><img alt="About me" class="img-fluid w-75 mt-5 ml-4"
+                            src="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/s960x960/91774478_2884730754906932_707554754884009984_o.jpg?_nc_cat=111&_nc_sid=7aed08&_nc_oc=AQlVYcksjk_fTT4M2VS5YPeEDi8AA130E--7oA3WtvYrQmyDycsE21pffVbiH9YnMy815Qi62qm6iLx4CmjXXg9b&_nc_ht=scontent-lht6-1.xx&_nc_tp=7&oh=596f508256d56e21bfe2c75f7f2e6b32&oe=5EBA2C40">
+                    </div>
+                </div>
 
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h2 class="text-uppercase pt-5"><span>A <span class="name-highlight2">little</span> about</span>
+                        <span>me</span></h2>
+
+                    <div class="paragraph py-3 w-65 ">
+                        <p class="para">Experienced Web Developer with full passion for the computer software industry
+                            and web development. I am a beginner in computing world. Semi-skilled in Java,Python,
+                            Databases and Graphic Design with advanced knowledge of HTML,Javascript and CSS. I am a
+                            self-driven individual studying BSc Computing(Software Engineering) focused in Computing at
+                            University of Northampton.</p>
+                    </div>
+                    <button class="btn btn-lg button"> <a href="/pages/cv.html">GET CV </a><i
+                            class="fas fa-briefcase"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--landing page ends-->
 
     <!-- Footer -->
     <footer>
@@ -104,11 +141,11 @@
                         </div>
                         <div class="col-md-12">
                             <ul class="social-list">
-                                <li> <a href="www.codepen.com"> <i class="fab fa-codepen"></i> </a> </li>
-                                <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
-                                <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
-                                <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
-                                <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
+                                <li> <a href="https://codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i> </a> </li>
+                                <li> <a href="https://github.io/rezaulhreza"> <i class="fab fa-github"> </i> </a> </li>
+                                <li> <a href="twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i> </a> </li>
+                                <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
+                                            class="fab fa-linkedin-in"></i> </a> </li>
                             </ul>
                         </div>
 
@@ -117,7 +154,7 @@
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <div class="row" id="copy-right">
                         <div class="col-md-12">
-                            <p class="text-center">All right reserved</p>
+                            <p class="text-center">All rights reserved</p>
                             <p class="text-center">Rezaul Hoque Reza &copy; 2020 </p>
                         </div>
                     </div>
