--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It's REZA </title>
+    <title>Rezaul H Reza-Contact</title>
 
     <!-- Bootsrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -19,8 +19,15 @@
     <!-- font awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon_io/site.webmanifest">
+
     <!-- Style sheet -->
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/main.css">
 
 </head>
 
@@ -53,7 +60,8 @@
                                 <a class="nav-link " href="cv.html">CV</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link active" href="#">Contact<span class="sr-only">(current)</span> </a>
+                                <a class="nav-link active" href="contact.html">Contact<span
+                                        class="sr-only">(current)</span> </a>
                             </li>
                         </ul>
                     </div>
@@ -64,11 +72,13 @@
     <!-- Navigation Bar Ends -->
 
 
-    \
+
+
+    <!-- Contact ends -->
 
 
     <!-- Footer -->
-    <footer>
+    <footer class="mt-0">
         <section>
             <div class="container-fluid">
                 <div class="row pt-4">
@@ -80,12 +90,13 @@
                             </div>
                             <div class="col-md-12">
                                 <ul class="social-list">
-                                    <li> <a href="#"> <i class="fab fa-facebook-f"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
+                                    <li> <a href="https://codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i> </a>
+                                    </li>
+                                    <li> <a href="https://github.io/rezaulhreza"> <i class="fab fa-github"> </i> </a>
+                                    </li>
+                                    <li> <a href="twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i> </a> </li>
+                                    <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
+                                                class="fab fa-linkedin-in"></i> </a> </li>
                                 </ul>
                             </div>
 
