--- a/pages/cv.html
+++ b/pages/cv.html
@@ -19,8 +19,11 @@
     <!-- font awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+
+
+
     <!-- Style sheet -->
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/main.css">
 
 </head>
 
@@ -66,6 +69,8 @@
 
 
 
+
+
     <!-- Footer -->
     <footer>
         <section>
@@ -79,12 +84,14 @@
                             </div>
                             <div class="col-md-12">
                                 <ul class="social-list">
-                                    <li> <a href="#"> <i class="fab fa-facebook-f"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
+                                    < <li> <a href="https://codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i> </a>
+                                        </li>
+                                        <li> <a href="https://github.io/rezaulhreza"> <i class="fab fa-github"> </i>
+                                            </a> </li>
+                                        <li> <a href="twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i> </a>
+                                        </li>
+                                        <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
+                                                    class="fab fa-linkedin-in"></i> </a> </li>
                                 </ul>
                             </div>
 
