js for portfolio page
page updated
with a scroll effect using javascript. done the function. more on the way

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rezaul H Reza- Portfolio</title>
+        <title>It's REZA </title>
 
         <!-- Bootstrap CDN -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -343,7 +343,7 @@
                             <div class="row pb-1" id="copy-right">
                                 <div class="col-md-12">
                                     <p class="text-center">All right reserved</p>
-                                    <p class="text-center">Rezaul Hoque Reza &copy; 2020 </p>
+                                    <p class="text-center">Rezaul Haque Reza &copy; 2020 </p>
                                 </div>
                             </div>
                         </div>
@@ -369,7 +369,7 @@
         </script>
 
         <!-- Vanilla js -->
-        <script src="../assets/main.js"></script>
+        <script src="../assets/JS/main2.js"></script>
     </body>
 
-    </html>
+</p>
