Contact page created
Contact page is created and css animation is added.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rezaul H Reza-Contact</title>
+    <title>Contact Me</title>
 
-    <!-- Bootsrap CDN -->
+    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
@@ -60,8 +60,7 @@
                                 <a class="nav-link " href="cv.html">CV</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link active" href="contact.html">Contact<span
-                                        class="sr-only">(current)</span> </a>
+                                <a class="nav-link active" href="#">Contact<span class="sr-only">(current)</span> </a>
                             </li>
                         </ul>
                     </div>
@@ -71,10 +70,84 @@
     </header>
     <!-- Navigation Bar Ends -->
 
+    <!-- Contact Starts -->
 
+    <section id="contact">
+        <div class="heading">
+            <h2>Contact Me For Business Enquiries</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="container">
+            <div class="row" id="contact-outer">
+                <div class="col-md-12 d-flex justify-content-center align-items-center">
+                    <div class="contact-inner px-5">
+                        <div class="contact-icon text-center py-5">
+                            <h6><i class="far fa-handshake fa-4x"></i> <br> Enquiries?</h6>
+                        </div>
+                        <form id="myForm">
+                            <div class="form-group ">
+                                <div class="input-group ">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-primary text-white">
+                                            <i class="fas fa-user"></i>
+                                        </span>
+                                    </div>
+                                    <input type="text" class="form-control" id="user-name" placeholder="Name" required>
+                                </div>
+                            </div>
 
+                            <div class="form-group ">
+                                <div class="input-group ">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-primary text-white">
+                                            <i class="fas fa-phone-alt"></i>
+                                        </span>
+                                    </div>
+                                    <input type="tel" class="form-control" id="user-phone" placeholder="Number"
+                                        required>
+                                </div>
+                            </div>
 
+                            <div class="form-group ">
+                                <div class="input-group ">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-primary text-white">
+                                            <i class="fas fa-envelope"></i>
+                                        </span>
+                                    </div>
+                                    <input type="email" class="form-control " placeholder="Email" id="user-mail"
+                                        required>
+                                </div>
+                            </div>
+
+                            <div class="form-group ">
+                                <div class="input-group ">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-primary text-white">
+                                            <i class="fas fa-pencil-alt"></i>
+                                        </span>
+                                    </div>
+                                    <input class="form-control" placeholder="message..." id="user-msg" required>
+                                </div>
+                            </div>
+                            <br>
+                            <input id="modal-btn" type="button" value="send" class="btn  btn-block btn-lg">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <!-- Contact ends -->
+
+
+
+
+
+
+
+
 
 
     <!-- Footer -->
@@ -90,13 +163,12 @@
                             </div>
                             <div class="col-md-12">
                                 <ul class="social-list">
-                                    <li> <a href="https://codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i> </a>
-                                    </li>
-                                    <li> <a href="https://github.io/rezaulhreza"> <i class="fab fa-github"> </i> </a>
-                                    </li>
-                                    <li> <a href="twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i> </a> </li>
-                                    <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
-                                                class="fab fa-linkedin-in"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-codepen"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
                                 </ul>
                             </div>
 
@@ -106,7 +178,7 @@
                         <div class="row pb-1" id="copy-right">
                             <div class="col-md-12">
                                 <p class="text-center">All right reserved</p>
-                                <p class="text-center">Rezaul Hoque Reza &copy; 2020 </p>
+                                <p class="text-center">Rezaul Haque Reza &copy; 2020 </p>
                             </div>
                         </div>
                     </div>
@@ -120,7 +192,7 @@
 
 
 
-    <!-- Bootsrap cdn -->
+    <!-- Bootstrap cdn -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
@@ -130,6 +202,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+
+    <!-- JS CDN -->
 </body>
 
 </html>
