update on css, modal for contact and cv

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>It's REZA </title>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -82,7 +82,7 @@
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
                     <div class="contact-inner px-5">
                         <div class="contact-icon text-center py-5">
-                            <h6><i class="far fa-handshake fa-4x"></i> <br> Enquiries?</h6>
+                            <h6><i class="far fa-handshake fa-4x"></i><br> Enquiries</h6>
                         </div>
                         <form id="myForm">
                             <div class="form-group ">
@@ -143,7 +143,47 @@
 
 
 
+    <!-- Modal one starts -->
+    <div id="my-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header d-flex justify-content-between px-4 text-white">
+                <h4>Message Sent!</h4>
+                <span id="close-btn">&times;</span>
+            </div>
+            <div class="modal-body">
+                <h5 class="text-center py-2 text-success">Have any interesting idea? let's meet!</h5>
+                <p> amet consectetur adipisicing elit. Nulla repellendus nisi, sunt consectetur ipsa velit
+                    repudiandae aperiam modi quisquam nihil nam asperiores doloremque mollitia dolor deleniti quibusdam
+                    nemo
+                    commodi ab.
+                </p>
+            </div>
 
+        </div>
+    </div>
+    <!-- Modal one ends -->
+
+
+
+    <!-- Modal two starts -->
+    <div id="my-modal2" class="modal2">
+        <div class="modal-content">
+            <div class="modal-header danger d-flex justify-content-between px-4 text-white">
+                <h4>Oops sorry!</h4>
+                <span id="close-btn2">&times;</span>
+            </div>
+            <div class="modal-body">
+                <h5 class="text-center py-2 text-danger">Message sent failed!</h5>
+                <p>
+                    please check if you filled up all fields and try again. <br>
+                    If still you are getting error please contact to your ISP or if urgent you can call me directly<a
+                        href="tel:+447960095662"> here</a>
+                </p>
+            </div>
+
+        </div>
+    </div>
+    <!-- Modal two ends -->
 
 
 
@@ -204,6 +244,7 @@
     </script>
 
     <!-- JS CDN -->
+    <script src="../assets/JS/main4.js"></script>
 </body>
 
 </html>
