--- a/pages/cv.html
+++ b/pages/cv.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It's REZA </title>
 
-    <!-- Bootsrap CDN -->
+    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
@@ -20,7 +20,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
 
-
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon_io/site.webmanifest">
 
     <!-- Style sheet -->
     <link rel="stylesheet" href="../assets/main.css">
@@ -67,9 +71,227 @@
     <!-- Navigation Bar Ends -->
 
 
+    <!-- CV starts -->
+
+    <!-- Uppers section starts -->
+    <section id="CV">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <div>
+                        <img src="../assets/images/image2.png" alt="" class="img-fluid ml-4 mb-4">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <div id="description">
+                        <p><i class="fas fa-user mr-3"></i> Rezaul H Reza</p>
+                        <p><i class="fas fa-envelope mr-3"></i> emailrezahere@gmail.com</p>
+                        <p><i class="fas fa-phone-alt mr-3"></i> +447960095662</p>
+                        <p><i class="fas fa-globe mr-3"></i>rezaulhreza.co.uk</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Uppers section starts end -->
 
 
+    <!-- Education starts -->
+    <section id="education">
+        <div class="heading">
+            <h2>Educ<span class="name-highlight">at</span>ion </h2>
+            <div class="underline"></div>
+        </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="animation edu-bg">
+                        <h4>BSc Software Engineering(Current)</h4> <br>
+                        <p>University Of Northampton <br>
+                            University Drive, NN1 5PH, <br>
+                            Northampton,
+                            United Kingdom.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="animation edu-bg-middle">
+                        <h4>Level-0</h4> <br>
+                        <p>Science, IT And Engineering, <br>
+                            University Of Northampton International College <br>
+                            Northampton
+                            United Kingdom.
+                        </p>
+                    </div>
+                </div>
+                <div class=" animation col-md-4">
+                    <div class=" edu-bg">
+                        <h4>Diploma</h4> <br>
+                        <p>Computer Science, <br>
+                            Genius Technical Institution</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Education starts -->
+
+
+    <!-- Skills Stars -->
+    <section id="skills-bg">
+        <div id="skills">
+            <div class="heading">
+                <h2>Ski<span class="name-highlight2">lls</span></h2>
+                <div class="underline"></div>
+            </div>
+            <div class="container">
+                <div class="row" id="skill-animation">
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <h5><i class="fas fa-code"></i></h5>
+                            <h3>Web Development</h3>
+                            <hr>
+                            <p>HTML5</p>
+                            <p>CSS3</p>
+                            <p>JavaScript</p>
+                            <p>JAVA</p>
+                            <p>Wireframing</p>
+                            <p>Python</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <h5><i class="fab fa-adobe"></i></h5>
+                            <h3>Graphics Design</h3>
+                            <hr>
+                            <p>Adobe Photoshop</p>
+                            <p>Adobe Illustrator</p>
+                            <p>Adobe XD</p>
+                            <p>Adobe Lightroom</p>
+                            <p>Adobe Premiere Pro</p>
+                        </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <div class="skill-item text-center">
+                            <h5><i class="far fa-handshake"></i></h5>
+                            <h3>Demonstrative Skills</h3>
+                            <hr>
+                            <p>Excellent Communication Skills</p>
+                            <p>Ability To Work Under Pressure</p>
+                            <p>Outstanding Customer Service Skills</p>
+                            <p>Problem Solving Skills</p>
+                            <p>Critical Analysis And Thinking Skills</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <!-- Skills ends -->
+
+
+    <!-- Interest Starts -->
+    <section id="interest">
+        <div class="heading">
+            <h2>Inter<span class="name-highlight2">es</span>T</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="Skill-bar-outer">
+                        <h5>Graphics Design</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                                aria-valuemin="0" aria-valuemax="100">
+                                90%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Skill-bar-outer">
+                        <h5>Photography</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
+                                aria-valuemin="0" aria-valuemax="100">
+                                70%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Skill-bar-outer">
+                        <h5>Python</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                                aria-valuemin="0" aria-valuemax="100">
+                                85%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Skill-bar-outer">
+                        <h5>Machine Learning</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
+                                aria-valuemin="0" aria-valuemax="100">
+                                60%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Interest Starts -->
+
+
+    <!-- Reference starts -->
+    <section id="reference">
+        <div class="heading">
+            <h2>Refe<span class="name-highlight2">ren</span>ce</h2>
+            <div class="underline"></div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="reference_inner">
+                        <h3>Mohibul Shoeb</h3>
+                        <br>
+                        <p>
+                            Event Management Officer, <br>
+                            University of kent <br>
+                            Kent ,United Kingdom <br>
+                            E-mail: shoeb.bbasust@gmail.com
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reference_inner">
+                        <h3>Liz Coulter-smith</h3>
+                        <br>
+                        <p>
+                            Liz Coulter-Smith <br>
+                            Liz.coulter-smith@northampton.ac.uk <br>
+                            01604 735500 <br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Reference starts -->
+
+
+    <!-- CV Ends -->
 
     <!-- Footer -->
     <footer>
@@ -84,14 +306,12 @@
                             </div>
                             <div class="col-md-12">
                                 <ul class="social-list">
-                                    < <li> <a href="https://codepen.io/rezaulhreza"> <i class="fab fa-codepen"></i> </a>
-                                        </li>
-                                        <li> <a href="https://github.io/rezaulhreza"> <i class="fab fa-github"> </i>
-                                            </a> </li>
-                                        <li> <a href="twitter.com/rezaulhreza"> <i class="fab fa-twitter"></i> </a>
-                                        </li>
-                                        <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
-                                                    class="fab fa-linkedin-in"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-codepen"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
+                                    <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
                                 </ul>
                             </div>
 
@@ -115,7 +335,7 @@
 
 
 
-    <!-- Bootsrap cdn -->
+    <!-- Bootstrap cdn -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
