--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,8 +82,10 @@
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
                     <div class="contact-inner px-5">
                         <div class="contact-icon text-center py-5">
-                            <h6><i class="far fa-handshake fa-4x"></i><br> Enquiries</h6>
+                            <h6><i class="far fa-handshake fa-4x"></i></h6>
                         </div>
+                        <marquee class="mb-2 p-1 text-danger border border-warning rounded">N.B. All the fields are
+                            required</marquee>
                         <form id="myForm">
                             <div class="form-group ">
                                 <div class="input-group ">
